syntax = "proto3";

package auth;

option go_package = "./gen;auth";

service Auth {
  rpc HashAndStore(PhoneNumber) returns (HashedCode) {}
}

message PhoneNumber {
  string number = 1;
}

message HashedCode {
  string number = 1;
  string code = 2;
}